definicion completa de api rest, modificacion de rutas y controlador, verificacion de funcionamiento ok
