# source/back-end/sample/routes/routes.js
@@ -1,10 +1,7 @@
-const {Router} = require ('express');  //importando la funcion router de la libreria express
-
+const { Router } = require('express');  //importando la funcion router de la libreria express
 const path = require('path');  //importando path y asignandolo a const path
-
-const {getFlights} = require ('../sample.controller'); //importando esquema de vuelos
-
-const router = Router(); 
+const { getFlights, getAirlines, getFlightsByAirports, getFlightsByDateRange } = require('../sample.controller'); //importando esquema de vuelos
+const router = Router();
 
 //endpoints
 
@@ -12,13 +9,9 @@ router.get('/', (req, res) => {
     res.sendFile(path.join(__dirname, '../front-end', 'index.html'));
 });
 
-router.get('/vuelos', getFlights);
+router.get('/vuelos/:id', getFlights);
+router.get('/porAeropuerto', getFlightsByAirports);
+router.get('/porFecha', getFlightsByDateRange);
+router.get('/aerolineas', getAirlines)
 
-
-
-
-
-
-
-
-module.exports = {router};
+module.exports = { router };
